--- a/auditlog/i18n/nl_NL.po
+++ b/auditlog/i18n/nl_NL.po
@@ -3,31 +3,31 @@
 # * auditlog
 # 
 # Translators:
-# Aurel <theaurel60@gmail.com>, 2017
 # OCA Transbot <transbot@odoo-community.org>, 2017
+# Erwin van der Ploeg <erwin@odooexperts.nl>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-02-22 00:54+0000\n"
-"PO-Revision-Date: 2017-02-22 00:54+0000\n"
-"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2017\n"
-"Language-Team: French (France) (https://www.transifex.com/oca/teams/23907/fr_FR/)\n"
+"POT-Creation-Date: 2017-07-26 11:57+0000\n"
+"PO-Revision-Date: 2017-07-26 11:57+0000\n"
+"Last-Translator: Erwin van der Ploeg <erwin@odooexperts.nl>, 2017\n"
+"Language-Team: Dutch (Netherlands) (https://www.transifex.com/oca/teams/23907/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: fr_FR\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: nl_NL\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_rule_action_id
 msgid "Action"
-msgstr ""
+msgstr "Actie"
 
 #. module: auditlog
 #: model:ir.ui.menu,name:auditlog.menu_audit
 msgid "Audit"
-msgstr ""
+msgstr "Audit"
 
 #. module: auditlog
 #: model:ir.model,name:auditlog.model_auditlog_autovacuum
@@ -72,7 +72,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_line_create_uid
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_rule_create_uid
 msgid "Created by"
-msgstr ""
+msgstr "Aangemaakt door"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_autovacuum_create_date
@@ -84,17 +84,17 @@ msgstr ""
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_http_request_search
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_http_session_search
 msgid "Created on"
-msgstr ""
+msgstr "Aangemaakt op"
 
 #. module: auditlog
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_log_search
 msgid "Date"
-msgstr "Date"
+msgstr "Datum"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_line_field_description
 msgid "Description"
-msgstr ""
+msgstr "Omschrijving"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_autovacuum_display_name
@@ -102,13 +102,13 @@ msgstr ""
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_line_display_name
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_rule_display_name
 msgid "Display Name"
-msgstr ""
+msgstr "weergavenaam"
 
 #. module: auditlog
 #: selection:auditlog.rule,state:0
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_rule_search
 msgid "Draft"
-msgstr ""
+msgstr "Concept"
 
 #. module: auditlog
 #: selection:auditlog.log,log_type:0 selection:auditlog.rule,log_type:0
@@ -118,13 +118,13 @@ msgstr ""
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_line_field_id
 msgid "Field"
-msgstr ""
+msgstr "Veld"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_line_ids
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_log_form
 msgid "Fields updated"
-msgstr ""
+msgstr "Velden bijgewerkt"
 
 #. module: auditlog
 #: selection:auditlog.log,log_type:0 selection:auditlog.rule,log_type:0
@@ -144,7 +144,7 @@ msgstr ""
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_log_search
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_rule_search
 msgid "Group By..."
-msgstr ""
+msgstr "Groeperen op...."
 
 #. module: auditlog
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_log_form
@@ -176,7 +176,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_line_id
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_rule_id
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_autovacuum___last_update
@@ -186,7 +186,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_line___last_update
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_rule___last_update
 msgid "Last Modified on"
-msgstr ""
+msgstr "Laatst gewijzigd op"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_autovacuum_write_uid
@@ -196,7 +196,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_write_uid
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_rule_write_uid
 msgid "Last Updated by"
-msgstr ""
+msgstr "Laatst bijgewerkt door"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_autovacuum_write_date
@@ -206,7 +206,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_write_date
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_rule_write_date
 msgid "Last Updated on"
-msgstr ""
+msgstr "Laatst bijgewerkt op"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_line_log_id
@@ -247,31 +247,31 @@ msgstr ""
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_log_search
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_log_tree
 msgid "Logs"
-msgstr "Logs"
+msgstr ""
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_method
 msgid "Method"
-msgstr ""
+msgstr "Methode"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_model_id
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_rule_model_id
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_log_search
 msgid "Model"
-msgstr ""
+msgstr "Model"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_http_request_display_name
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_http_session_display_name
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_rule_name
 msgid "Name"
-msgstr ""
+msgstr "Naam"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_line_new_value
 msgid "New Value"
-msgstr ""
+msgstr "Nieuwe Waarde"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_line_new_value_text
@@ -281,7 +281,7 @@ msgstr ""
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_line_old_value
 msgid "Old Value"
-msgstr ""
+msgstr "Oude Waarde"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_line_old_value_text
@@ -314,7 +314,7 @@ msgstr ""
 #. module: auditlog
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_rule_form
 msgid "Rule"
-msgstr ""
+msgstr "Regel"
 
 #. module: auditlog
 #: model:ir.actions.act_window,name:auditlog.action_auditlog_rule_tree
@@ -322,7 +322,7 @@ msgstr ""
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_rule_search
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_rule_tree
 msgid "Rules"
-msgstr ""
+msgstr "Regels"
 
 #. module: auditlog
 #: model:ir.model.fields,help:auditlog.field_auditlog_rule_model_id
@@ -361,7 +361,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_http_request_http_session_id
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_http_session_id
 msgid "Session"
-msgstr ""
+msgstr "Sessie"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_http_session_name
@@ -416,7 +416,7 @@ msgstr ""
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_http_session_search
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_log_search
 msgid "User"
-msgstr ""
+msgstr "Gebruiker"
 
 #. module: auditlog
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_http_request_search
@@ -436,15 +436,15 @@ msgstr ""
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_rule_user_ids
 msgid "Users"
-msgstr "Utilsateurs"
+msgstr "Gebruikers"
 
 #. module: auditlog
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_log_form
 msgid "Values"
-msgstr ""
+msgstr "Waarden"
 
 #. module: auditlog
-#: code:addons/auditlog/models/rule.py:535
+#: code:addons/auditlog/models/rule.py:536
 #, python-format
 msgid "View logs"
 msgstr ""
