--- a/auditlog/i18n/tr.po
+++ b/auditlog/i18n/tr.po
@@ -3,15 +3,14 @@
 # * auditlog
 # 
 # Translators:
-# OCA Transbot <transbot@odoo-community.org>, 2016
-# Ahmet Altinisik <aaltinisik@altinkaya.com.tr>, 2016
+# OCA Transbot <transbot@odoo-community.org>, 2017
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 9.0c\n"
+"Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-12-29 03:39+0000\n"
-"PO-Revision-Date: 2016-12-29 03:39+0000\n"
-"Last-Translator: Ahmet Altinisik <aaltinisik@altinkaya.com.tr>, 2016\n"
+"POT-Creation-Date: 2017-12-01 02:09+0000\n"
+"PO-Revision-Date: 2017-12-01 02:09+0000\n"
+"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2017\n"
 "Language-Team: Turkish (https://www.transifex.com/oca/teams/23907/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -198,7 +197,7 @@ msgstr "Son değişiklik"
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_log_write_uid
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_rule_write_uid
 msgid "Last Updated by"
-msgstr "Son güncellendi"
+msgstr "Son güncelleyen"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_autovacuum_write_date
@@ -261,7 +260,7 @@ msgstr "Method"
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_rule_model_id
 #: model:ir.ui.view,arch_db:auditlog.view_auditlog_log_search
 msgid "Model"
-msgstr "Alan"
+msgstr "Model"
 
 #. module: auditlog
 #: model:ir.model.fields,field_description:auditlog.field_auditlog_http_request_display_name
@@ -452,7 +451,7 @@ msgid "Values"
 msgstr "Değerler"
 
 #. module: auditlog
-#: code:addons/auditlog/models/rule.py:535
+#: code:addons/auditlog/models/rule.py:536
 #, python-format
 msgid "View logs"
 msgstr "Günlükleri göster"
